--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --bg-color: #ac0bac;
-    --primary-color: #DDDDDD;
+    --primary-color: #c7279f;
     --secondary-color: #311738;
     --font: "Nunito Sans", sans-serif;
 }
